--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thư mời gặp mặt</title>
+    <title>Lời mời đặc biệt</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
     <style>
@@ -185,8 +185,8 @@
                 
                 <p class="text-gray-700 font-semibold mb-4">Hãy chọn một ngày:</p>
                 <div class="selection-container flex-row justify-center space-x-4">
-                    <div class="date-option" data-date="Thứ năm (18/9/2025)">Thứ năm (18/9/2025)</div>
-                    <div class="date-option" data-date="Thứ sáu (19/9/2025)">Thứ sáu (19/9/2025)</div>
+                    <div class="date-option" data-date="Thứ năm (09/10/2025)">Thứ năm (09/10/2025)</div>
+                    <div class="date-option" data-date="Thứ sáu (10/10/2025)">Thứ sáu (10/10/2025)</div>
                 </div>
             </div>
         </div>
@@ -196,11 +196,11 @@
             <div class="page-content">
                 <p class="text-gray-700 font-semibold text-2xl mb-4">Tuyệt vời !</p>
                 <p class="text-gray-600 font-medium text-lg mb-6">Anh có kế hoạch như này em thấy hợp ní hông ?</p>
-                <p class="text-gray-500 mb-8">Đầu tiên mình sẽ đi ăn một thứ gì đó, sau đó mình sẽ đi cafe tám chuyện, rùi mình đi dạo thành phố đêmm nhé</p>
+                <p class="text-gray-500 mb-8"> Anh muốn dẫn em đi ăn một món nào đó mà em thích. Sau đó mình sẽ đi cafe ngắm view nói chiện phiếm =)) Đi dạo dạo thành phố buổi tối cũng chill </p>
                 
                 <div class="flex flex-col gap-4">
                     <div id="yes-plan-btn" class="choice-btn">Quá là hợp ní luôn</div>
-                    <div id="no-plan-btn" class="choice-btn">Hông hợp lí xíu nào !</div>
+                    <div id="no-plan-btn" class="choice-btn">Chạ hợp lí!</div>
                 </div>
             </div>
         </div>
@@ -219,9 +219,9 @@
         <div id="page4" class="page">
             <div class="page-content">
                 <h1 class="title">Vậy chốt rùi nhen !</h1>
-                <p class="text-gray-600 text-lg mb-4">Mình sẽ gặp nhau vào 6h tối ngày <span id="final-date" class="font-normal text-[#c25272]"></span></p>
-                <p class="text-gray-600 text-lg">và anh sẽ đón em ở <span id="final-address" class="font-normal text-[#c25272]"></span></p>
-                <p class="text-gray-500 mt-6">Hãy mang theo chiếc mũ ghiền của em nhé!</p>
+                <p class="text-gray-600 text-lg mb-4">Anh sẽ qua rước em vào 6h30 tối ngày <span id="final-date" class="font-normal text-[#c25272]"></span></p>
+                <p class="text-gray-600 text-lg"> ở <span id="final-address" class="font-normal text-[#c25272]"></span></p>
+                <p class="text-gray-500 mt-6">Hãy cầm theo chiếc mũ ghiền của em nhé!</p>
             </div>
         </div>
     </div>
