--- a/index.html
+++ b/index.html
@@ -180,10 +180,10 @@
         <!-- Page 1: Chọn ngày -->
         <div id="page1" class="page active">
             <div class="page-content">
-                <h1 class="title">Thư mời gặp mặt</h1>
-                <p class="subtitle">Mời em dành chút thời gian gặp mặt, cà phê tám chuyện nhenn</p>
+                <h1 class="title"> Hé lu pé </h1>
+                <p class="subtitle">Bấm vào đồng ý lời hẹn là sự lựa chọn đúng đắn =))</p>
                 
-                <p class="text-gray-700 font-semibold mb-4">Hãy chọn một ngày:</p>
+                <p class="text-gray-700 font-semibold mb-4">Hãy chọn một ngày mà em thích:</p>
                 <div class="selection-container flex-row justify-center space-x-4">
                     <div class="date-option" data-date="Thứ năm (09/10/2025)">Thứ năm (09/10/2025)</div>
                     <div class="date-option" data-date="Thứ sáu (10/10/2025)">Thứ sáu (10/10/2025)</div>
@@ -196,7 +196,7 @@
             <div class="page-content">
                 <p class="text-gray-700 font-semibold text-2xl mb-4">Tuyệt vời !</p>
                 <p class="text-gray-600 font-medium text-lg mb-6">Anh có kế hoạch như này em thấy hợp ní hông ?</p>
-                <p class="text-gray-500 mb-8"> Anh muốn dẫn em đi ăn một món nào đó mà em thích. Sau đó mình sẽ đi cafe ngắm view nói chiện phiếm =)) Đi dạo dạo thành phố buổi tối cũng chill </p>
+                <p class="text-gray-500 mb-8"> Đầu tiên anh muốn dẫn em đi ăn một món nào đó mà em thích. Sau đó mình sẽ đi cafe ngắm view nói chiện phiếm =)) Đi dạo dạo thành phố buổi tối cũng chill, hay là muốn đi coi film hông ? </p>
                 
                 <div class="flex flex-col gap-4">
                     <div id="yes-plan-btn" class="choice-btn">Quá là hợp ní luôn</div>
@@ -315,3 +315,4 @@
     </script>
 </body>
 </html>
+
